# agent-chief

./: .gitignore  BLOCKERS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chief_Implementation_Spec_v3_EN.md  LICENSE  Makefile  PROGRESS.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  sync-release-notes.yml
cli/: connect.py  init.py  main.py  runtime.py
context/: infer.py
context/providers/: calendar.py  clock.py
core/: brain.py  config.py  digest.py  embedding.py  learner.py  policy.py  schema.py  scorer.py  state.py
delivery/: base.py  desktop.py  telegram.py  terminal.py  webhook.py
demo/: day_of_engineer.json  runner.py
dispatch/: acceptance.py  executor.py
docs/: PUBLISHING.md  architecture.md  decisions.md  openclaw-manual-test.md  protocol.md  release-checklist.md  skill-manual-tests.md
docs/blog/: heartbeat-agents-are-training-you-to-ignore-them.md
docs/eval/: ablation.md  calibration.md  cohort-benchmark.md  drift.md
docs/launch/: awesome-list-submissions.md  launch-plan.md
docs/security/: red-team.md
eval/: __init__.py  ablation.py  calibration.py  cohort.py  drift.py  generate_golden.py  generate_personas.py  golden.jsonl  learning.py  personas.jsonl  redteam.py  runner.py
eval/reports/: ablation.md  calibration.md  cohort.md  drift.md  learning.md  redteam.md
examples/: README.md  config.example.toml  heartbeat_agent.py  mcp_config.json  python_client.py  send-event.sh
examples/integrations/: README.md  stock_analysis_bot.py  stock_feed.json  webhook_template.py
ingest/: http.py  mcp_server.py  normalize.py  push.py
ingest/connectors/: __init__.py  composio.py
ingest/sources/: base.py  github.py  rss.py
judge/: anthropic.py  base.py  deepseek.py  factory.py  fixtures.py  ollama.py  openai.py  pricing.py  prompts.py
judge/templates/v1/: context.j2  distill.j2  retry.j2  system.j2  topic_infer.j2  user.j2  verify.j2
memory/: associate.py  store.py
policy/: POLICY.template.md  USER.template.md
scripts/: check_release_version.py  demo-gif.sh  readme_metrics.py  showcase.sh
skills/claude-code/: SKILL.md
skills/openclaw/: SKILL.md  hook.py
tests/: helpers.py  test_ablation.py  test_acceptance.py  test_adversarial.py  test_brain_wiring.py  test_calibration.py  test_chaos.py  test_cli.py  test_cohort.py  test_connect_cli.py  test_connectors.py  test_console.py  test_delivery.py  test_demo.py  test_demo_routing.py  test_digest.py  test_dispatch.py  test_docs.py  test_drift.py  test_eval.py  test_ingest.py  test_integrations.py  test_judge_backends.py  test_learner.py  test_learning.py  test_memory.py  test_natural_feedback.py  test_openclaw.py  test_pins.py  test_plan_attached.py  test_prompts.py  test_push.py  test_readme_metrics.py  test_release_version.py  test_routing.py  test_scene.py  test_shadow.py  test_skills_packaging.py  test_sources.py  test_stage1.py  (+6 more)
tests/golden/: digest.txt
ui/: __init__.py  console.html
