[project]
name = "agent-chief"
version = "0.1.0"
description = "Chief — the chief of staff for your agents and information sources"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]

[project.scripts]
chief = "cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "cli",
    "core",
    "context",
    "judge",
    "ingest",
    "dispatch",
    "memory",
    "delivery",
    "demo",
    "skills",
    "policy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
