[project]
name = "agent-chief"
version = "0.2.0"
description = "Chief — the chief of staff for your agents and information sources"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SmileLikeYe" }]
keywords = [
    "agents", "attention", "notifications", "triage", "llm",
    "mcp", "local-first", "chief-of-staff", "interruption-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "plyer>=2.1.0",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.2",
    "uvicorn>=0.50.0",
    "questionary>=2.1.1",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/SmileLikeYe/agent-chief"
Repository = "https://github.com/SmileLikeYe/agent-chief"
Issues = "https://github.com/SmileLikeYe/agent-chief/issues"
Changelog = "https://github.com/SmileLikeYe/agent-chief/releases"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]

[project.scripts]
chief = "cli.main:app"

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "cli",
    "core",
    "context",
    "judge",
    "ingest",
    "dispatch",
    "memory",
    "delivery",
    "demo",
    "skills",
    "policy",
    "eval",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
